# colat

./: README.md  colat.bat  pyproject.toml
colat/: __init__.py  __main__.py
